# simd_math

./: .gitignore  AVXDouble.h  BasicOp.h  CMakeLists.txt  DoubleTest.cpp  Doublex4.h  FastMacros.h  FastMath.h  FloatTemplate.h  FloatTest.cpp  Floatx8.h  Int32x4.h  Int4Test.cpp  IntTemplate.h  main.cpp
